--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env:
     - OPENSSL=1.1.1c
     - OPENSSL_DIR="$HOME/multissl/openssl/${OPENSSL}"
     - PATH="${OPENSSL_DIR}/bin:$PATH"
-    # Use -O3 because we don't use debugger on Travis-CI
-    - CFLAGS="-I${OPENSSL_DIR}/include -O3"
+    # Use -Og because we want to run all GDB tests
+    - CFLAGS="-I${OPENSSL_DIR}/include -Og"
     - LDFLAGS="-L${OPENSSL_DIR}/lib"
     # Set rpath with env var instead of -Wl,-rpath linker flag
     # OpenSSL ignores LDFLAGS when linking bin/openssl
@@ -43,6 +43,7 @@ matrix:
       addons:
         apt:
           packages:
+            - gdb
             - xvfb
     - name: "Documentation build"
       os: linux
