bpo-37369: Fix path handling when python.exe is used as a symlink

--- a/.azure-pipelines/pr.yml
+++ b/.azure-pipelines/pr.yml
@@ -151,3 +151,7 @@ jobs:
   - template: ./windows-steps.yml
     parameters:
       targetBranch: $(System.PullRequest.TargetBranch)
+  - template: ./windows-layout-steps.yml
+    parameters:
+      kind: appx
+      fulltest: true
