Add environment logging and disable most tests

--- a/.azure-pipelines/posix-steps.yml
+++ b/.azure-pipelines/posix-steps.yml
@@ -57,7 +57,7 @@ steps:
   - script: make pythoninfo
     displayName: 'Display build info'
 
-  - script: $COMMAND buildbottest TESTOPTS="-j4 -uall,-cpu --junit-xml=$(build.binariesDirectory)/test-results.xml"
+  - script: $COMMAND buildbottest TESTOPTS="-j4 -uall,-cpu --junit-xml=$(build.binariesDirectory)/test-results.xml test_embed"
     displayName: 'Tests'
     env:
       ${{ if eq(parameters.xvfb, 'true') }}:
