--- a/.github/appveyor.yml
+++ b/.github/appveyor.yml
@@ -31,7 +31,7 @@ build_script:
   - cmd: PCbuild\build.bat -e -p x64
   - cmd: PCbuild\amd64\python.exe -m test.pythoninfo
 test_script:
-  - cmd: PCbuild\rt.bat -x64 -q -uall -u-cpu -u-largefile -rwW --slowest --timeout=1200 --fail-env-changed -j0 test_embed
+  - cmd: PCbuild\rt.bat -x64 -q -uall -u-cpu -u-largefile -rwW --slowest --timeout=1200 --fail-env-changed -j0
 environment:
   HOST_PYTHON: C:\Python36\python.exe
 image:
