bpo-37631: Append $(EXTRA_CFLAGS) to $(CFLAGS_NODIST) as well
Previously, the $(EXTRA_CFLAGS) were only appended to $(CFLAGS),
hence any conflicting $(CFLAGS_NODIST) would override them,
as $(CFLAGS_NODIST) is appended to $(CFLAGS).

For example `CFLAGS_NODIST="-O2" EXTRA_CFLAGS="-Og"` would result in optimized
build instead of the debug one.

--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -95,7 +95,7 @@ CONFIGURE_LDFLAGS=	@LDFLAGS@
 # command line to append to these values without stomping the pre-set
 # values.
 PY_CFLAGS=	$(BASECFLAGS) $(OPT) $(CONFIGURE_CFLAGS) $(CFLAGS) $(EXTRA_CFLAGS)
-PY_CFLAGS_NODIST=$(CONFIGURE_CFLAGS_NODIST) $(CFLAGS_NODIST) -I$(srcdir)/Include/internal
+PY_CFLAGS_NODIST=$(CONFIGURE_CFLAGS_NODIST) $(CFLAGS_NODIST) $(EXTRA_CFLAGS) -I$(srcdir)/Include/internal
 # Both CPPFLAGS and LDFLAGS need to contain the shell's value for setup.py to
 # be able to build extension modules using the directories specified in the
 # environment variables
