--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -2371,7 +2371,7 @@ install: @FRAMEWORKINSTALLFIRST@ @INSTALLTARGETS@ @FRAMEWORKINSTALLLAST@
 			install|*) ensurepip="" ;; \
 		esac; \
 		$(RUNSHARED) $(PYTHON_FOR_BUILD) -m ensurepip \
-			$$ensurepip --root=$(DESTDIR)/ ; \
+			$$ensurepip --prefix=$(prefix) ; \
 	fi
 
 .PHONY: altinstall
@@ -2382,7 +2382,7 @@ altinstall: commoninstall
 			install|*) ensurepip="--altinstall" ;; \
 		esac; \
 		$(RUNSHARED) $(PYTHON_FOR_BUILD) -m ensurepip \
-			$$ensurepip --root=$(DESTDIR)/ ; \
+			$$ensurepip --prefix=$(prefix) ; \
 	fi
 
 .PHONY: commoninstall
