--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -441,6 +441,7 @@ PYTHON_OBJS=	\
 		Python/importdl.o \
 		Python/initconfig.o \
 		Python/instrumentation.o \
+		Python/instruction_sequence.o \
 		Python/intrinsics.o \
 		Python/jit.o \
 		Python/legacy_tracing.o \
@@ -1168,6 +1169,7 @@ PYTHON_HEADERS= \
 		$(srcdir)/Include/internal/pycore_importdl.h \
 		$(srcdir)/Include/internal/pycore_initconfig.h \
 		$(srcdir)/Include/internal/pycore_instruments.h \
+		$(srcdir)/Include/internal/pycore_instruction_sequence.h \
 		$(srcdir)/Include/internal/pycore_interp.h \
 		$(srcdir)/Include/internal/pycore_intrinsics.h \
 		$(srcdir)/Include/internal/pycore_jit.h \
