Normalize checksums and filenames, fix git ignore detection

--- a/PCbuild/regen.targets
+++ b/PCbuild/regen.targets
@@ -33,7 +33,7 @@
     <_JITOutputs Include="$(GeneratedPyConfigDir)jit_stencils.h"/>
     <_CasesSources Include="$(PySourcePath)Python\bytecodes.c;$(PySourcePath)Python\optimizer_bytecodes.c;"/>
     <_CasesOutputs Include="$(PySourcePath)Python\generated_cases.c.h;$(PySourcePath)Include\opcode_ids.h;$(PySourcePath)Include\internal\pycore_uop_ids.h;$(PySourcePath)Python\opcode_targets.h;$(PySourcePath)Include\internal\pycore_opcode_metadata.h;$(PySourcePath)Include\internal\pycore_uop_metadata.h;$(PySourcePath)Python\optimizer_cases.c.h;$(PySourcePath)Lib\_opcode_metadata.py"/>
-    <_SbomSources Include="$(PySourcePath)PCBuild\get_externals.bat" />
+    <_SbomSources Include="$(PySourcePath)PCbuild\get_externals.bat" />
     <_SbomOutputs Include="$(PySourcePath)Misc\externals.spdx.json;$(PySourcePath)Misc\sbom.spdx.json">
       <Format>json</Format>
     </_SbomOutputs>
