--- a/configure.ac
+++ b/configure.ac
@@ -7394,7 +7394,7 @@ AS_CASE([$ac_sys_system],
       [_tkinter],
       [_interpreters],
       [_xxinterpchannels],
-      [_xxinterpqueues],
+      [_interpqueues],
       [grp],
       [pwd],
       [resource],
@@ -7519,7 +7519,7 @@ PY_STDLIB_MOD_SIMPLE([_struct])
 PY_STDLIB_MOD_SIMPLE([_typing])
 PY_STDLIB_MOD_SIMPLE([_interpreters])
 PY_STDLIB_MOD_SIMPLE([_xxinterpchannels])
-PY_STDLIB_MOD_SIMPLE([_xxinterpqueues])
+PY_STDLIB_MOD_SIMPLE([_interpqueues])
 PY_STDLIB_MOD_SIMPLE([_zoneinfo])
 
 dnl multiprocessing modules
