--- a/Modules/Setup.stdlib.in
+++ b/Modules/Setup.stdlib.in
@@ -44,7 +44,7 @@
 
 # build supports subinterpreters
 @MODULE__INTERPRETERS_TRUE@_interpreters _interpretersmodule.c
-@MODULE__XXINTERPCHANNELS_TRUE@_xxinterpchannels _xxinterpchannelsmodule.c
+@MODULE__INTERPCHANNELS_TRUE@_interpchannels _interpchannelsmodule.c
 @MODULE__INTERPQUEUES_TRUE@_interpqueues _interpqueuesmodule.c
 
 @MODULE__ZONEINFO_TRUE@_zoneinfo _zoneinfo.c
